// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<BlogRenderer /> should render correctly - index 1`] = `
<div>
  <div
    class="sc-cUEOzv fizLAr page-containerstyles__StyledPageContainer-sc-19l7k4-0"
    width="prose"
  >
    <div
      class="sc-eDWCr gfHLtc"
    >
      <div
        class="sc-bqWxrE cRkaeW"
        style="margin-left: -0px;"
      />
    </div>
    <div
      class="sc-eDWCr kticUa blog-rendererstyles__BodySkeleton-sc-15d9dvh-0 kzmwSy"
    >
      <div
        class="sc-bqWxrE cRkaeW"
        style="margin-left: -0px;"
      />
    </div>
  </div>
  <div
    class="sc-cjibBx FXeDp"
  >
    <style>
      .js .animated-content__wrapper--hidden {
  opacity: 0.01;
}
    </style>
    <div
      class="sc-cCjUiG htyYId animated-content__wrapper--hidden"
    >
      <div
        class="creative-commonssyles__Wrapper-sc-qff226-0 eObJgx"
      >
        <div
          class="creative-commonssyles__Background-sc-qff226-1 gREbZK"
        />
        <div
          class="sc-jrcTuL drIieO creative-commonssyles__Inner-sc-qff226-2 jkifKu"
        >
          <h1
            class="sc-dkrFOg eRKGDm sc-csuSiG gvoVyF"
            id="copyright"
          >
            Copyright
          </h1>
          <span
            class="sc-gikAfH buRiqg"
          >
            Most of my photos are licensed under
             
            <a
              aria-label="Creative Commons BY-SA 3.0 (opens in a new tab)"
              class="sc-iBYQkv jNlLug"
              href="https://creativecommons.org/licenses/by-sa/3.0/"
              rel="noopener noreferrer"
              target="_blank"
            >
              Creative Commons BY-SA 3.0
              <div
                class="sc-ftTHYK dbfjGz"
              >
                <svg
                  class="sc-gKPRtg eSdzmv sc-pyfCe hLCbyO"
                  height="18"
                  viewBox="0 0 24 24"
                  width="18"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M12.5 11.3c.4.4 1 .4 1.4 0L19 6.2V9c0 .6.4 1 1 1s1-.4 1-1V4c0-.6-.4-1-1-1h-5c-.6 0-1 .4-1 1s.4 1 1 1h2.4l-4.9 4.9c-.4.4-.4 1 0 1.4zM19 19c0 1.1-.9 2-2 2H5c-1.1 0-2-.9-2-2V7c0-1.1.9-2 2-2h7v2H5v12h12v-7h2"
                  />
                </svg>
              </div>
            </a>
            .
            <br />
            If you are unsure about your right to use them please 
            <a
              class="sc-iBYQkv jNlLug"
              href="/contact"
            >
              contact me
            </a>
            .
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<BlogRenderer /> should render correctly with blog 1`] = `
<div>
  <div
    class="sc-cUEOzv fizLAr page-containerstyles__StyledPageContainer-sc-19l7k4-0"
    width="prose"
  >
    <div
      class="sc-cabOPr cxUFJc"
    >
      <div
        class="sc-gYbzsP bCTbDs"
      >
        <a
          class="sc-iBYQkv jNlLug"
          href="/blogs"
        >
          ⇠ Blogs
        </a>
      </div>
    </div>
    <div
      class="sc-cabOPr cxUFJc"
    >
      <h1
        class="sc-bcXHqe bHgOFy sc-hhOBVt dpGXFh"
      >
        St. Ives ⛵ 2018
      </h1>
    </div>
    <div
      class="blog-rendererstyles__DateContainer-sc-15d9dvh-1 kuvyGk"
    >
      <span
        class="sc-eDvSVe ezgbKo sc-ksBlkl iiDSod"
      >
        Published 
        TEST_DATE
      </span>
    </div>
    <div
      class="blog-rendererstyles__TagList-sc-15d9dvh-2 cpiaZB"
    >
      <div
        class="sc-iTFTee"
      >
        <span
          class="sc-iAEawV buRgyr"
          type="travel"
        >
          Travel
        </span>
      </div>
    </div>
    <div
      class="sc-bYMpWt jdetWK"
    >
      <span
        class="sc-gikAfH buRiqg sc-kMjNwy bEnXPJ markdown-renderer__element"
      >
        Some content with 
        <a
          aria-label="a link (opens in a new tab)"
          class="sc-iBYQkv jNlLug"
          href="https://duckduckgo.com/"
          rel="noopener noreferrer"
          target="_blank"
        >
          a link
          <div
            class="sc-ftTHYK dbfjGz"
          >
            <svg
              class="sc-gKPRtg eSdzmv sc-pyfCe hLCbyO"
              height="18"
              viewBox="0 0 24 24"
              width="18"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M12.5 11.3c.4.4 1 .4 1.4 0L19 6.2V9c0 .6.4 1 1 1s1-.4 1-1V4c0-.6-.4-1-1-1h-5c-.6 0-1 .4-1 1s.4 1 1 1h2.4l-4.9 4.9c-.4.4-.4 1 0 1.4zM19 19c0 1.1-.9 2-2 2H5c-1.1 0-2-.9-2-2V7c0-1.1.9-2 2-2h7v2H5v12h12v-7h2"
              />
            </svg>
          </div>
        </a>
        <br />
      </span>
    </div>
  </div>
  <div
    class="sc-cjibBx FXeDp"
  >
    <style>
      .js .animated-content__wrapper--hidden {
  opacity: 0.01;
}
    </style>
    <div
      class="sc-cCjUiG htyYId animated-content__wrapper--hidden"
    >
      <div
        class="creative-commonssyles__Wrapper-sc-qff226-0 eObJgx"
      >
        <div
          class="creative-commonssyles__Background-sc-qff226-1 gREbZK"
        />
        <div
          class="sc-jrcTuL drIieO creative-commonssyles__Inner-sc-qff226-2 jkifKu"
        >
          <h1
            class="sc-dkrFOg eRKGDm sc-csuSiG gvoVyF"
            id="copyright"
          >
            Copyright
          </h1>
          <span
            class="sc-gikAfH buRiqg"
          >
            Most of my photos are licensed under
             
            <a
              aria-label="Creative Commons BY-SA 3.0 (opens in a new tab)"
              class="sc-iBYQkv jNlLug"
              href="https://creativecommons.org/licenses/by-sa/3.0/"
              rel="noopener noreferrer"
              target="_blank"
            >
              Creative Commons BY-SA 3.0
              <div
                class="sc-ftTHYK dbfjGz"
              >
                <svg
                  class="sc-gKPRtg eSdzmv sc-pyfCe hLCbyO"
                  height="18"
                  viewBox="0 0 24 24"
                  width="18"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M12.5 11.3c.4.4 1 .4 1.4 0L19 6.2V9c0 .6.4 1 1 1s1-.4 1-1V4c0-.6-.4-1-1-1h-5c-.6 0-1 .4-1 1s.4 1 1 1h2.4l-4.9 4.9c-.4.4-.4 1 0 1.4zM19 19c0 1.1-.9 2-2 2H5c-1.1 0-2-.9-2-2V7c0-1.1.9-2 2-2h7v2H5v12h12v-7h2"
                  />
                </svg>
              </div>
            </a>
            .
            <br />
            If you are unsure about your right to use them please 
            <a
              class="sc-iBYQkv jNlLug"
              href="/contact"
            >
              contact me
            </a>
            .
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<BlogRenderer /> should render correctly with blog and admin 1`] = `
<div>
  <div
    class="sc-cUEOzv fizLAr page-containerstyles__StyledPageContainer-sc-19l7k4-0"
    width="prose"
  >
    <div
      class="sc-cabOPr cxUFJc"
    >
      <div
        class="sc-gYbzsP bCTbDs"
      >
        <a
          class="sc-iBYQkv jNlLug"
          href="/blogs"
        >
          ⇠ Blogs
        </a>
      </div>
    </div>
    <div
      class="sc-cabOPr cxUFJc"
    >
      <h1
        class="sc-bcXHqe bHgOFy sc-hhOBVt dpGXFh"
      >
        St. Ives ⛵ 2018
      </h1>
    </div>
    <div
      class="blog-rendererstyles__DateContainer-sc-15d9dvh-1 kuvyGk"
    >
      <span
        class="sc-eDvSVe ezgbKo sc-ksBlkl iiDSod"
      >
        Published 
        TEST_DATE
      </span>
    </div>
    <div
      class="blog-rendererstyles__TagList-sc-15d9dvh-2 cpiaZB"
    >
      <div
        class="sc-iTFTee"
      >
        <span
          class="sc-iAEawV buRgyr"
          type="travel"
        >
          Travel
        </span>
      </div>
    </div>
    <div
      class="sc-bYMpWt jdetWK"
    >
      <span
        class="sc-gikAfH buRiqg sc-kMjNwy bEnXPJ markdown-renderer__element"
      >
        Some content with 
        <a
          aria-label="a link (opens in a new tab)"
          class="sc-iBYQkv jNlLug"
          href="https://duckduckgo.com/"
          rel="noopener noreferrer"
          target="_blank"
        >
          a link
          <div
            class="sc-ftTHYK dbfjGz"
          >
            <svg
              class="sc-gKPRtg eSdzmv sc-pyfCe hLCbyO"
              height="18"
              viewBox="0 0 24 24"
              width="18"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M12.5 11.3c.4.4 1 .4 1.4 0L19 6.2V9c0 .6.4 1 1 1s1-.4 1-1V4c0-.6-.4-1-1-1h-5c-.6 0-1 .4-1 1s.4 1 1 1h2.4l-4.9 4.9c-.4.4-.4 1 0 1.4zM19 19c0 1.1-.9 2-2 2H5c-1.1 0-2-.9-2-2V7c0-1.1.9-2 2-2h7v2H5v12h12v-7h2"
              />
            </svg>
          </div>
        </a>
        <br />
      </span>
    </div>
    <div
      class="sc-jrcTuL drIieO"
    >
      <h1
        class="sc-gswNZR gzqAHo sc-csuSiG hpbHKR"
        id="edit-blog"
      >
        EDIT BLOG
      </h1>
      <div>
        BLOG_FORM
      </div>
    </div>
  </div>
  <div
    class="sc-cjibBx FXeDp"
  >
    <style>
      .js .animated-content__wrapper--hidden {
  opacity: 0.01;
}
    </style>
    <div
      class="sc-cCjUiG htyYId animated-content__wrapper--hidden"
    >
      <div
        class="creative-commonssyles__Wrapper-sc-qff226-0 eObJgx"
      >
        <div
          class="creative-commonssyles__Background-sc-qff226-1 gREbZK"
        />
        <div
          class="sc-jrcTuL drIieO creative-commonssyles__Inner-sc-qff226-2 jkifKu"
        >
          <h1
            class="sc-dkrFOg eRKGDm sc-csuSiG gvoVyF"
            id="copyright"
          >
            Copyright
          </h1>
          <span
            class="sc-gikAfH buRiqg"
          >
            Most of my photos are licensed under
             
            <a
              aria-label="Creative Commons BY-SA 3.0 (opens in a new tab)"
              class="sc-iBYQkv jNlLug"
              href="https://creativecommons.org/licenses/by-sa/3.0/"
              rel="noopener noreferrer"
              target="_blank"
            >
              Creative Commons BY-SA 3.0
              <div
                class="sc-ftTHYK dbfjGz"
              >
                <svg
                  class="sc-gKPRtg eSdzmv sc-pyfCe hLCbyO"
                  height="18"
                  viewBox="0 0 24 24"
                  width="18"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M12.5 11.3c.4.4 1 .4 1.4 0L19 6.2V9c0 .6.4 1 1 1s1-.4 1-1V4c0-.6-.4-1-1-1h-5c-.6 0-1 .4-1 1s.4 1 1 1h2.4l-4.9 4.9c-.4.4-.4 1 0 1.4zM19 19c0 1.1-.9 2-2 2H5c-1.1 0-2-.9-2-2V7c0-1.1.9-2 2-2h7v2H5v12h12v-7h2"
                  />
                </svg>
              </div>
            </a>
            .
            <br />
            If you are unsure about your right to use them please 
            <a
              class="sc-iBYQkv jNlLug"
              href="/contact"
            >
              contact me
            </a>
            .
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<BlogRenderer /> should render correctly with blog load error 1`] = `
<div>
  <div
    class="sc-cUEOzv fizLAr page-containerstyles__StyledPageContainer-sc-19l7k4-0"
    width="prose"
  >
    <span
      class="sc-gikAfH buRiqg"
    >
      <span
        class="sc-eeMvmM kyCQJh"
      >
        This blog couldn't be loaded
        <br />
        Some error
      </span>
    </span>
    <div
      class="sc-eDWCr gfHLtc"
    >
      <div
        class="sc-bqWxrE cRkaeW"
        style="margin-left: -0px;"
      />
    </div>
    <div
      class="sc-eDWCr kticUa blog-rendererstyles__BodySkeleton-sc-15d9dvh-0 kzmwSy"
    >
      <div
        class="sc-bqWxrE cRkaeW"
        style="margin-left: -0px;"
      />
    </div>
    <div
      class="sc-jrcTuL drIieO"
    >
      <h1
        class="sc-dkrFOg eRKGDm sc-csuSiG kJUcBp"
        id="this-is-taking-a-while.-maybe-something-isn't-quite-right..."
      >
        This is taking a while. Maybe something isn't quite right...
      </h1>
    </div>
  </div>
  <div
    class="sc-cjibBx FXeDp"
  >
    <style>
      .js .animated-content__wrapper--hidden {
  opacity: 0.01;
}
    </style>
    <div
      class="sc-cCjUiG htyYId animated-content__wrapper--hidden"
    >
      <div
        class="creative-commonssyles__Wrapper-sc-qff226-0 eObJgx"
      >
        <div
          class="creative-commonssyles__Background-sc-qff226-1 gREbZK"
        />
        <div
          class="sc-jrcTuL drIieO creative-commonssyles__Inner-sc-qff226-2 jkifKu"
        >
          <h1
            class="sc-dkrFOg eRKGDm sc-csuSiG gvoVyF"
            id="copyright"
          >
            Copyright
          </h1>
          <span
            class="sc-gikAfH buRiqg"
          >
            Most of my photos are licensed under
             
            <a
              aria-label="Creative Commons BY-SA 3.0 (opens in a new tab)"
              class="sc-iBYQkv jNlLug"
              href="https://creativecommons.org/licenses/by-sa/3.0/"
              rel="noopener noreferrer"
              target="_blank"
            >
              Creative Commons BY-SA 3.0
              <div
                class="sc-ftTHYK dbfjGz"
              >
                <svg
                  class="sc-gKPRtg eSdzmv sc-pyfCe hLCbyO"
                  height="18"
                  viewBox="0 0 24 24"
                  width="18"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M12.5 11.3c.4.4 1 .4 1.4 0L19 6.2V9c0 .6.4 1 1 1s1-.4 1-1V4c0-.6-.4-1-1-1h-5c-.6 0-1 .4-1 1s.4 1 1 1h2.4l-4.9 4.9c-.4.4-.4 1 0 1.4zM19 19c0 1.1-.9 2-2 2H5c-1.1 0-2-.9-2-2V7c0-1.1.9-2 2-2h7v2H5v12h12v-7h2"
                  />
                </svg>
              </div>
            </a>
            .
            <br />
            If you are unsure about your right to use them please 
            <a
              class="sc-iBYQkv jNlLug"
              href="/contact"
            >
              contact me
            </a>
            .
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<BlogRenderer /> should render correctly with initial state 1`] = `
<div>
  <div
    class="sc-cUEOzv fizLAr page-containerstyles__StyledPageContainer-sc-19l7k4-0"
    width="prose"
  >
    <div
      class="sc-eDWCr gfHLtc"
    >
      <div
        class="sc-bqWxrE cRkaeW"
        style="margin-left: -0px;"
      />
    </div>
    <div
      class="sc-eDWCr kticUa blog-rendererstyles__BodySkeleton-sc-15d9dvh-0 kzmwSy"
    >
      <div
        class="sc-bqWxrE cRkaeW"
        style="margin-left: -0px;"
      />
    </div>
  </div>
  <div
    class="sc-cjibBx FXeDp"
  >
    <style>
      .js .animated-content__wrapper--hidden {
  opacity: 0.01;
}
    </style>
    <div
      class="sc-cCjUiG htyYId animated-content__wrapper--hidden"
    >
      <div
        class="creative-commonssyles__Wrapper-sc-qff226-0 eObJgx"
      >
        <div
          class="creative-commonssyles__Background-sc-qff226-1 gREbZK"
        />
        <div
          class="sc-jrcTuL drIieO creative-commonssyles__Inner-sc-qff226-2 jkifKu"
        >
          <h1
            class="sc-dkrFOg eRKGDm sc-csuSiG gvoVyF"
            id="copyright"
          >
            Copyright
          </h1>
          <span
            class="sc-gikAfH buRiqg"
          >
            Most of my photos are licensed under
             
            <a
              aria-label="Creative Commons BY-SA 3.0 (opens in a new tab)"
              class="sc-iBYQkv jNlLug"
              href="https://creativecommons.org/licenses/by-sa/3.0/"
              rel="noopener noreferrer"
              target="_blank"
            >
              Creative Commons BY-SA 3.0
              <div
                class="sc-ftTHYK dbfjGz"
              >
                <svg
                  class="sc-gKPRtg eSdzmv sc-pyfCe hLCbyO"
                  height="18"
                  viewBox="0 0 24 24"
                  width="18"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M12.5 11.3c.4.4 1 .4 1.4 0L19 6.2V9c0 .6.4 1 1 1s1-.4 1-1V4c0-.6-.4-1-1-1h-5c-.6 0-1 .4-1 1s.4 1 1 1h2.4l-4.9 4.9c-.4.4-.4 1 0 1.4zM19 19c0 1.1-.9 2-2 2H5c-1.1 0-2-.9-2-2V7c0-1.1.9-2 2-2h7v2H5v12h12v-7h2"
                  />
                </svg>
              </div>
            </a>
            .
            <br />
            If you are unsure about your right to use them please 
            <a
              class="sc-iBYQkv jNlLug"
              href="/contact"
            >
              contact me
            </a>
            .
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<BlogRenderer /> should render correctly with ssrBlog 1`] = `
<div>
  <div
    class="sc-cUEOzv fizLAr page-containerstyles__StyledPageContainer-sc-19l7k4-0"
    width="prose"
  >
    <div
      class="sc-cabOPr cxUFJc"
    >
      <div
        class="sc-gYbzsP bCTbDs"
      >
        <a
          class="sc-iBYQkv jNlLug"
          href="/blogs"
        >
          ⇠ Blogs
        </a>
      </div>
    </div>
    <div
      class="sc-cabOPr cxUFJc"
    >
      <h1
        class="sc-bcXHqe bHgOFy sc-hhOBVt dpGXFh"
      >
        St. Ives ⛵ 2018
      </h1>
    </div>
    <div
      class="blog-rendererstyles__DateContainer-sc-15d9dvh-1 kuvyGk"
    >
      <span
        class="sc-eDvSVe ezgbKo sc-ksBlkl iiDSod"
      >
        Published 
        TEST_DATE
      </span>
    </div>
    <div
      class="blog-rendererstyles__TagList-sc-15d9dvh-2 cpiaZB"
    >
      <div
        class="sc-iTFTee"
      >
        <span
          class="sc-iAEawV buRgyr"
          type="travel"
        >
          Travel
        </span>
      </div>
    </div>
    <div
      class="sc-bYMpWt jdetWK"
    >
      <span
        class="sc-gikAfH buRiqg sc-kMjNwy bEnXPJ markdown-renderer__element"
      >
        Some content with 
        <a
          aria-label="a link (opens in a new tab)"
          class="sc-iBYQkv jNlLug"
          href="https://duckduckgo.com/"
          rel="noopener noreferrer"
          target="_blank"
        >
          a link
          <div
            class="sc-ftTHYK dbfjGz"
          >
            <svg
              class="sc-gKPRtg eSdzmv sc-pyfCe hLCbyO"
              height="18"
              viewBox="0 0 24 24"
              width="18"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M12.5 11.3c.4.4 1 .4 1.4 0L19 6.2V9c0 .6.4 1 1 1s1-.4 1-1V4c0-.6-.4-1-1-1h-5c-.6 0-1 .4-1 1s.4 1 1 1h2.4l-4.9 4.9c-.4.4-.4 1 0 1.4zM19 19c0 1.1-.9 2-2 2H5c-1.1 0-2-.9-2-2V7c0-1.1.9-2 2-2h7v2H5v12h12v-7h2"
              />
            </svg>
          </div>
        </a>
        <br />
      </span>
    </div>
  </div>
  <div
    class="sc-cjibBx FXeDp"
  >
    <style>
      .js .animated-content__wrapper--hidden {
  opacity: 0.01;
}
    </style>
    <div
      class="sc-cCjUiG htyYId animated-content__wrapper--hidden"
    >
      <div
        class="creative-commonssyles__Wrapper-sc-qff226-0 eObJgx"
      >
        <div
          class="creative-commonssyles__Background-sc-qff226-1 gREbZK"
        />
        <div
          class="sc-jrcTuL drIieO creative-commonssyles__Inner-sc-qff226-2 jkifKu"
        >
          <h1
            class="sc-dkrFOg eRKGDm sc-csuSiG gvoVyF"
            id="copyright"
          >
            Copyright
          </h1>
          <span
            class="sc-gikAfH buRiqg"
          >
            Most of my photos are licensed under
             
            <a
              aria-label="Creative Commons BY-SA 3.0 (opens in a new tab)"
              class="sc-iBYQkv jNlLug"
              href="https://creativecommons.org/licenses/by-sa/3.0/"
              rel="noopener noreferrer"
              target="_blank"
            >
              Creative Commons BY-SA 3.0
              <div
                class="sc-ftTHYK dbfjGz"
              >
                <svg
                  class="sc-gKPRtg eSdzmv sc-pyfCe hLCbyO"
                  height="18"
                  viewBox="0 0 24 24"
                  width="18"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M12.5 11.3c.4.4 1 .4 1.4 0L19 6.2V9c0 .6.4 1 1 1s1-.4 1-1V4c0-.6-.4-1-1-1h-5c-.6 0-1 .4-1 1s.4 1 1 1h2.4l-4.9 4.9c-.4.4-.4 1 0 1.4zM19 19c0 1.1-.9 2-2 2H5c-1.1 0-2-.9-2-2V7c0-1.1.9-2 2-2h7v2H5v12h12v-7h2"
                  />
                </svg>
              </div>
            </a>
            .
            <br />
            If you are unsure about your right to use them please 
            <a
              class="sc-iBYQkv jNlLug"
              href="/contact"
            >
              contact me
            </a>
            .
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;
